# Archaic

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO-50.md  TODO.md  archaic-user.service  archaic.service  config.example.toml  default.nix  flake.nix  install.sh  main.c  nohup.out  pipeline.txt  radix_perftest.txt  run.sh  testfile_probe.tmp  trie_perftest.txt  update.py  update_fileloader.py  wizard.sh
.github/workflows/: benchmark.yml  ci.yml  release.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/run-continuation/: ses_1c98130d8ffe51HHjfLDOuFfnd.json  ses_1ca75c987ffeXbovpFNm4HY0o1.json  ses_1cdb5c2abffe23fz4RJrgLIasq.json
Formula/: archaic.rb
bash/: archaic.bash
benchmarks/: baseline.json
fish/: archaic.fish
ipc/: client.c  client.h  protocol.h  server.c  server.h  test_client.c
man/: archaic-cli.1  archaic.1  archaic.conf.5
nvim/lua/archaic/: client.lua  cmp_source.lua  init.lua  telescope.lua
nvim/plugin/: archaic.lua
src/: cache.c  cache.h  config.c  config.h  hashset.c  hashset.h  helper.c  incremental.c  incremental.h  log.c  log.h  lru.c  lru.h  metrics.c  metrics.h  mmap-state.c  mmap-state.h  path-utils.c  path-utils.h  portable-barrier.h  project-detector.c  project-detector.h  recent-files.c  recent-files.h  scanner.c  scanner.h  ssh_remote.c  ssh_remote.h  systemd_notify.h  tcp-server.c  tcp-server.h  threadmanager.h  threadpool.c  threadpool.h  trie-storage.c  trie-storage.h  trie.c  trie.h  watcher.c  watcher.h
src/io/: fileloader.c  fileloader.h
test/: bench.c  perf.c  property-tests.c  test.c  test.h  unit_tests.c
zsh/: archaic.zsh
